# software_architecture

./: CMakeLists.txt  README.md  hz.yaml  task_1.cpp  task_2.cpp  task_3.cpp  test.http
facade/: CMakeLists.txt  facade_controller.h  facade_main.cpp  facade_service.cpp  facade_service.h
logging/: CMakeLists.txt  logging_controller.h  logging_main.cpp  logging_service.cpp  logging_service.h
messages/: CMakeLists.txt  messages_controller.h  messages_main.cpp  messages_service.cpp  messages_service.h
